force-app/main/default/objects/Carrier_WC_Rate__c/Carrier_WC_Rate__c.object-meta.xml
<CustomObject>
    <label>Carrier WC Rate</label>
    <nameField>
        <label>Carrier WC Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carrier WC Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>