force-app/main/default/objects/Carrier_WC_Rate__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Carrier WC Rates</relationshipLabel>
    <relationshipName>Carrier_WC_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>