force-app/main/default/objects/Carrier_WC_Rate__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <formula>IF(
ISPICKVAL(Policy__r.Type__c , &quot;Master&quot;),  Policy__r.Policy_Year__r.Policy_Start_Date__c ,
IF(
ISPICKVAL(Policy__r.Type__c , &quot;MCP&quot;),  Policy__r.Effective_Date__c , NULL))</formula>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>