force-app/main/default/objects/Carrier_WC_Rate__c/fields/Expense_Constant__c.field-meta.xml
<CustomField>
    <fullName>Expense_Constant__c</fullName>
    <label>Expense Constant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>