force-app/main/default/objects/Carrier_WC_Rate__c/fields/Hazard_Group__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Group__c</fullName>
    <label>Hazard Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>