force-app/main/default/objects/Carrier_WC_Rate__c/fields/Per_Capita_Charge__c.field-meta.xml
<CustomField>
    <fullName>Per_Capita_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Per Capita Charge</label>
    <type>Checkbox</type>
</CustomField>