force-app/main/default/objects/Carrier_WC_Rate__c/fields/Per_Capita_Rate__c.field-meta.xml
<CustomField>
    <fullName>Per_Capita_Rate__c</fullName>
    <formula>IF(
 Per_Capita_Charge__c = TRUE,  Rate__c * 100 , NULL)</formula>
    <label>Per Capita Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>