force-app/main/default/objects/Carrier_WC_Rate__c/fields/Policy_Year__c.field-meta.xml
<CustomField>
    <fullName>Policy_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Year</label>
    <referenceTo>Policy_Year__c</referenceTo>
    <relationshipLabel>Carrier WC Rates</relationshipLabel>
    <relationshipName>Carrier_WC_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>