force-app/main/default/objects/Carrier_WC_Rate__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Carrier WC Rates</relationshipLabel>
    <relationshipName>Carrier_WC_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>