force-app/main/default/objects/Carrier_WC_Rate__c/fields/State_Assessment_Fee__c.field-meta.xml
<CustomField>
    <fullName>State_Assessment_Fee__c</fullName>
    <formula>State__r.State_Assessment_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Assessment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>