force-app/main/default/objects/Carrier_WC_Rate__c/fields/State_Classification__c.field-meta.xml
<CustomField>
    <fullName>State_Classification__c</fullName>
    <formula>text(State__r.State_Classification__c )</formula>
    <label>State Classification</label>
    <type>Text</type>
</CustomField>