force-app/main/default/objects/Carrier_WC_Rate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>text( Policy__r.Status__c )</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>