force-app/main/default/objects/Carrier_WC_Rate__c/fields/Territory_2_Rate__c.field-meta.xml
<CustomField>
    <fullName>Territory_2_Rate__c</fullName>
    <formula>Policy__r.Territory_2__c * Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory 2 Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>