force-app/main/default/objects/Carrier_WC_Rate__c/fields/Territory_4_Rate__c.field-meta.xml
<CustomField>
    <fullName>Territory_4_Rate__c</fullName>
    <formula>Policy__r.Territory_4__c * Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory 4 Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>