force-app/main/default/objects/Carrier_WC_Rate__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Carrier WC Rates</relationshipLabel>
    <relationshipName>Carrier_WC_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>