force-app/main/default/objects/Carrier_WC_Rate__c/fields/Territory_Manual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Territory_Manual_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Territory Manual Rate</label>
    <type>Checkbox</type>
</CustomField>