force-app/main/default/objects/Carrier_WC_Rate__c/fields/Trion_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Trion_Bill_Rate__c</fullName>
    <formula>ROUND(
(( Rate__c * Modifier__c )*  State_Assessment_Fee__c  )+Rate__c*Modifier__c,4 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trion Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>