force-app/main/default/objects/Carrier_WC_Rate__c/fields/Trion_Bill_Rate_Exc_Assessment_Fees__c.field-meta.xml
<CustomField>
    <fullName>Trion_Bill_Rate_Exc_Assessment_Fees__c</fullName>
    <formula>ROUND(
Rate__c*Modifier__c,4 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trion Bill Rate Exc. Assessment Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>