force-app/main/default/objects/Carrier_WC_Rate__c/fields/WC_Code__c.field-meta.xml
<CustomField>
    <fullName>WC_Code__c</fullName>
    <label>WC Code</label>
    <referenceTo>WC_Code__c</referenceTo>
    <relationshipLabel>Carrier WC Rates</relationshipLabel>
    <relationshipName>Carrier_WC_Rates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>