force-app/main/default/objects/Carrier_WC_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Carrier__c</columns>
    <columns>Carrier_Name__c</columns>
    <columns>WC_Code__c</columns>
    <columns>State__c</columns>
    <columns>Policy__c</columns>
    <columns>Policy_Year__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State_Name__c</field>
        <operation>equals</operation>
        <value>Nevada</value>
    </filters>
    <label>All</label>
</ListView>